manifest/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: game2048
  name: game2048
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: game2048
